--- a/text.html
+++ b/text.html
@@ -4,62 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="styles/text.css">
     <title>Text</title>
-    <style>
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-        }
 
-        .video-title {
-            font-size: 18px;
-            font-weight: bold;
-            width: 280px;
-            line-height: 24px;
-            margin-bottom: 5px;
-        }
-
-        .video-stats {
-            font-size: 14px;
-            color: rgb(96, 96, 96);
-
-            margin-top: 0px;
-            margin-bottom: 20px;
-        }
-
-        .video-author {
-            color: rgb(96, 96, 96);
-            font-size: 14px;
-            margin-top: 0px;
-            margin-bottom: 20px;
-        }
-
-        .video-description {
-            color: rgb(96, 96, 96);
-            font-size: 14px;
-            width: 280px;
-            line-height: 22px;
-            margin-top: 0px;
-            margin-bottom: 100px;
-        }
-
-        .apple-text {
-            font-size: 14px;
-            background-color: rgb(227, 65, 64);
-            color: white;
-            text-align: center;
-            padding: 15px 10px 15px 10px;
-        }
-
-        .underline{
-            margin-left: 5px;
-        }
-
-        .underline:hover {
-            text-decoration: underline;
-            cursor: pointer;
-
-        }
-    </style>
 </head>
 
 <body>
