--- a/youtube.html
+++ b/youtube.html
@@ -18,17 +18,76 @@
         .video-title {
             width: 300px;
         }
+
+        .video-preview {
+            width: 300px;
+            display: inline-block;
+            vertical-align: top;
+            margin-right: 15px;
+        }
+
+        .channel-picture {
+
+            display: inline-block;
+            width: 50px;
+        }
+
+        .video-info {
+            display: inline-block;
+
+            width: 200px;
+        }
     </style>
 </head>
 
 <body>
     <input type="text" class="search-bar" placeholder="Search">
 
-    <img class="thumbnail" src="/thumbnails/thumbnail-1.webp" alt="">
 
-    <p class="video-title">Talking Tech and AI with Google CEO Sundar Pichai!</p>
-    <p class="video-author">Marques Brownlee</p>
-    <p class="video-stats">3.4M views · 6 months ago</p>
+
+    <div class="video-preview">
+        <div>
+            <img class="thumbnail" src="/thumbnails/thumbnail-1.webp" alt="">
+        </div>
+
+        <div>
+            <div class="channel-picture">
+                <img src="/channel-pictures/channel-1.jpeg" alt="">
+            </div>
+            <div class="video-info">
+                <p class="video-title">Talking Tech and AI with Google CEO Sundar Pichai!</p>
+                <p class="video-author">Marques Brownlee</p>
+                <p class="video-stats">3.4M views · 6 months ago</p>
+            </div>
+
+
+        </div>
+
+
+
+    </div>
+    <div class="video-preview">
+
+        <div> <img class="thumbnail" src="thumbnails/thumbnail-2.webp" alt=""></div>
+        <div>
+
+
+
+            <p class="video-title">Try Not To Laugh Challenge #9
+            </p>
+            <p class="video-author">Markiplier
+            </p>
+            <p class="video-stats">19M views · 4 years ago
+            </p>
+        </div>
+
+
+
+
+
+    </div>
+
+
 
 </body>
 
