--- a/youtube.html
+++ b/youtube.html
@@ -9,69 +9,26 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="/styles/video.css">
+    <link rel="stylesheet" href="/styles/header.css">
+    <link rel="stylesheet" href="/styles/general.css">
+
     <title>Youtube</title>
-    <style>
-        p {
-            font-family: "Roboto", Arial, Helvetica, sans-serif;
-            margin-top: 0;
-            margin-bottom: 0;
-        }
 
-        .thumbnail {
-            width: 100%;
-        }
-
-        .search-bar {
-            display: block;
-        }
-
-        .video-title {
-            margin-top: 0px;
-            font-size: 14px;
-            font-weight: 500;
-            line-height: 20px;
-            margin-bottom: 12px;
-        }
-
-        .video-preview {}
-
-        .video-info-grid {
-            display: grid;
-            grid-template-columns: 50px 1fr;
-        }
-
-
-
-        .profile-picture {
-            width: 40px;
-            border-radius: 50px;
-        }
-
-        .thumbnail-row {
-            margin-bottom: 12px;
-        }
-
-        .video-author,
-        .video-stats {
-            font-size: 12px;
-            color: rgb(96, 96, 96);
-        }
-
-        .video-author {
-            margin-bottom: 4px;
-        }
-
-        .video-grid {
-            display: grid;
-            grid-template-columns: 1fr 1fr 1fr;
-            row-gap: 16px;
-            column-gap: 40px;
-        }
-    </style>
 </head>
 
 <body>
-    <input type="text" class="search-bar" placeholder="Search">
+    <div class="header">
+        <div class="left-section">
+            left-section
+        </div>
+        <div class="middle-section">
+            <input type="text" class="search-bar" placeholder="Search">
+        </div>
+        <div class="right-section">
+            right-section
+        </div>
+    </div>
     <div class="video-grid">
         <div class="video-preview">
             <div class="thumbnail-row">
