End of the Flex box

--- a/youtube.html
+++ b/youtube.html
@@ -20,13 +20,20 @@
 <body>
     <div class="header">
         <div class="left-section">
-            left-section
+            <img class="hamburger-menu" src="/header-icons/hamburger-menu.svg" alt="">
+            <img class="youtube-logo" src="/header-icons/youtube-logo.svg" alt="">
         </div>
         <div class="middle-section">
             <input type="text" class="search-bar" placeholder="Search">
+            <button class="search-button"> <img class="search-icon" src="/header-icons/search.svg" alt=""> </button>
+            <button class="voice-search-button"><img class="voice-search-icon" src="/header-icons/voice-search-icon.svg"
+                    alt=""></button>
         </div>
         <div class="right-section">
-            right-section
+            <img class="upload-icon" src="/header-icons/upload.svg" alt="">
+            <img class="youtube-apps-icon" src="/header-icons/youtube-apps.svg" alt="">
+            <img class="notifications-icon" src="/header-icons/notifications.svg" alt="">
+            <img class="current-user-picture" src="/header-icons/my-channel.jpeg" alt="">
         </div>
     </div>
     <div class="video-grid">
