--- a/youtube.html
+++ b/youtube.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/styles/video.css">
     <link rel="stylesheet" href="/styles/header.css">
     <link rel="stylesheet" href="/styles/general.css">
+    <link rel="stylesheet" href="/styles/sidebar.css">
 
     <title>Youtube</title>
 
@@ -25,21 +26,79 @@
         </div>
         <div class="middle-section">
             <input type="text" class="search-bar" placeholder="Search">
-            <button class="search-button"> <img class="search-icon" src="/header-icons/search.svg" alt=""> </button>
-            <button class="voice-search-button"><img class="voice-search-icon" src="/header-icons/voice-search-icon.svg"
-                    alt=""></button>
+
+            <button class="search-button">
+                <img class="search-icon" src="/header-icons/search.svg" alt="">
+
+                <div class="tooltip">Search</div>
+
+            </button>
+
+
+            <button class="voice-search-button">
+                <img class="voice-search-icon" src="/header-icons/voice-search-icon.svg" alt="">
+                <div class="tooltip">Voice Search</div>
+            </button>
         </div>
         <div class="right-section">
-            <img class="upload-icon" src="/header-icons/upload.svg" alt="">
-            <img class="youtube-apps-icon" src="/header-icons/youtube-apps.svg" alt="">
-            <img class="notifications-icon" src="/header-icons/notifications.svg" alt="">
+            <div class="create">
+                <img class="upload-icon" src="/header-icons/upload.svg" alt="">
+                <div class="tooltip">Create</div>
+            </div>
+
+            <div class="youtube-apps">
+                <img class="youtube-apps-icon" src="/header-icons/youtube-apps.svg" alt="">
+                <div class="tooltip">Youtube Apps</div>
+            </div>
+
+
+            <div class="notifications-icons-container">
+                <img class="notifications-icon" src="/header-icons/notifications.svg" alt="">
+                <div class="notifications-count">3</div>
+                <div class="tooltip">Notofications</div>
+            </div>
+
+
+
             <img class="current-user-picture" src="/header-icons/my-channel.jpeg" alt="">
         </div>
+    </div>
+    <div class="sidebar">
+        <div class="sidebar-link">
+            <img src="/sidebar-icons/home.svg" alt="">
+            <div>Home</div>
+        </div>
+        <div class="sidebar-link">
+            <img src="/sidebar-icons/explore.svg" alt="">
+            <div>Explore</div>
+        </div>
+        <div class="sidebar-link">
+            <img src="/sidebar-icons/subscriptions.svg" alt="">
+            <div>Subscriptions</div>
+
+        </div>
+        <div class="sidebar-link">
+            <img src="/sidebar-icons/originals.svg" alt="">
+            <div>Originals</div>
+
+        </div>
+        <div class="sidebar-link">
+            <img src="/sidebar-icons/youtube-music.svg" alt="">
+            <div>Youtube Music</div>
+
+        </div>
+        <div class="sidebar-link">
+            <img src="/sidebar-icons/library.svg" alt="">
+            <div>Library</div>
+
+        </div>
+
     </div>
     <div class="video-grid">
         <div class="video-preview">
             <div class="thumbnail-row">
                 <img class="thumbnail" src="/thumbnails/thumbnail-1.webp" alt="">
+                <div class="video-time">14:20</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
@@ -62,6 +121,7 @@
         <div class="video-preview">
             <div class="thumbnail-row">
                 <img class="thumbnail" src="/thumbnails/thumbnail-2.webp" alt="">
+                <div class="video-time">8:22</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
@@ -88,10 +148,12 @@
         <div class="video-preview">
             <div class="thumbnail-row">
                 <img class="thumbnail" src="/thumbnails/thumbnail-3.webp" alt="">
+                <div class="video-time">9:13</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
                     <img class="profile-picture" src="/channel-pictures/channel-3.jpeg" alt="">
+
                 </div>
 
                 <div class="video-info">
@@ -113,6 +175,7 @@
         <div class="video-preview">
             <div class="thumbnail-row">
                 <img class="thumbnail" src="/thumbnails/thumbnail-4.webp" alt="">
+                <div class="video-time">22:09</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
@@ -142,10 +205,12 @@
         <div class="video-preview">
             <div class="thumbnail-row">
                 <img class="thumbnail" src="/thumbnails/thumbnail-5.webp" alt="">
+                <div class="video-time">11:17</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
                     <img class="profile-picture" src="/channel-pictures/channel-5.jpeg" alt="">
+
                 </div>
 
                 <div class="video-info">
@@ -164,15 +229,17 @@
         <div class="video-preview">
             <div class="thumbnail-row">
                 <img class="thumbnail" src="/thumbnails/thumbnail-6.webp" alt="">
+                <div class="video-time">19:59</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
                     <img class="profile-picture" src="/channel-pictures/channel-6.jpeg" alt="">
+
                 </div>
 
                 <div class="video-info">
                     <p class="video-title">
-                        Why Planes Don't Fly Over Tibet</p>
+                        Anything You Can Fit In The Circle I’ll Pay For</p>
                     <p class="video-author">RealLifeLore</p>
                     <p class="video-stats">6M views · 1 years ago</p>
                 </div>
@@ -189,10 +256,14 @@
         <div class="video-preview">
             <div class="thumbnail-row">
                 <img class="thumbnail" src="/thumbnails/thumbnail-7.webp" alt="">
+
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
                     <img class="profile-picture" src="/channel-pictures/channel-7.jpeg" alt="">
+                    <div class="video-time">10:13</div>
+
+
                 </div>
 
                 <div class="video-info">
@@ -213,10 +284,13 @@
         <div class="video-preview">
             <div class="thumbnail-row">
                 <img class="thumbnail" src="/thumbnails/thumbnail-8.webp" alt="">
+                <div class="video-time">7:12</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
                     <img class="profile-picture" src="/channel-pictures/channel-8.jpeg" alt="">
+                    <div class="video-time">7:12</div>
+
                 </div>
 
                 <div class="video-info">
@@ -238,16 +312,16 @@
 
 
         </div>
-
+        <!-- 
         <div class="video-preview">
             <div class="thumbnail-row">
                 <img class="thumbnail" src="/thumbnails/thumbnail-9.webp" alt="">
+                <div class="video-time">13:17</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
                     <img class="profile-picture" src="/channel-pictures/channel-9.jpeg" alt="">
                 </div>
-
                 <div class="video-info">
                     <p class="video-title">
 
@@ -264,15 +338,19 @@
 
 
 
-        </div>
+        </div> -->
 
         <div class="video-preview">
             <div class="thumbnail-row">
                 <img class="thumbnail" src="/thumbnails/thumbnail-9.webp" alt="">
+                <div class="video-time">13:17</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
                     <img class="profile-picture" src="/channel-pictures/channel-9.jpeg" alt="">
+                    <div class="video-time">7:53</div>
+
+
                 </div>
 
                 <div class="video-info">
@@ -299,10 +377,13 @@
         <div class="video-preview">
             <div class="thumbnail-row">
                 <img class="thumbnail" src="/thumbnails/thumbnail-10.webp" alt="">
+                <div class="video-time">7:53</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
                     <img class="profile-picture" src="/channel-pictures/channel-10.jpeg" alt="">
+
+
                 </div>
 
                 <div class="video-info">
@@ -328,10 +409,13 @@
         <div class="video-preview">
             <div class="thumbnail-row">
                 <img class="thumbnail" src="/thumbnails/thumbnail-11.webp" alt="">
+                <div class="video-time">4:10</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
                     <img class="profile-picture" src="/channel-pictures/channel-11.jpeg" alt="">
+
+
                 </div>
 
                 <div class="video-info">
@@ -359,10 +443,13 @@
         <div class="video-preview">
             <div class="thumbnail-row">
                 <img class="thumbnail" src="/thumbnails/thumbnail-12.webp" alt="">
+                <div class="video-time">4:15</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
                     <img class="profile-picture" src="/channel-pictures/channel-12.jpeg" alt="">
+
+
                 </div>
 
                 <div class="video-info">
